# open-coscientist

./: .gitignore  MONITORING_GUIDE.md  README.md  check_imports.py  main.py  pyproject.toml  run_test.sh  test_new_backend.py  test_quick_integration.py
agents/: refactor_plan1.md
app/: configuration_page.py  tournament_viewer.py
coscientist/: agent_state_tracker.py  common.py  config_loader.py  configuration_agent.py  custom_types.py  evolution_agent.py  final_report_agent.py  framework.py  generation_agent.py  global_state.py  literature_review_agent.py  meta_review_agent.py  multiturn.py  observability.py  progress_events.py  ranking_agent.py  reflection_agent.py  research_backend.py  robust_parsing.py  status_manager.py  supervisor_agent.py  validation.py
coscientist/cli/: __init__.py  agent_monitor.py  check_progress.py  list_research_goals.py  live_monitor.py  monitor_progress.py  resume_research.py  status.py
coscientist/interact/: __init__.py  background.py  configuration_page.py  resume_page.py  tournament_viewer.py
docs/: README.md
docs/TODO/: ARCHITECTURE_DECISION.md  DATETIME_DIRECTORIES.md  PACKAGE_STRUCTURE.md  PROGRESS_TRACKING_OPTIONS.md  PROGRESS_TRACKING_SETUP.md  README.md  RELIABILITY_FIX_PLAN.md  SETUP_COMPLETE.md  STATE_MANAGEMENT_GUIDE.md  STATUS_MANAGEMENT_SOLUTION.md  UI_IMPROVEMENT_PLAN.md
docs/agents/: AGENT_DEVELOPMENT.md
docs/architecture/: AGENT_COMMUNICATION_DIAGRAM.md  COMPLETE_DATA_FLOW.md  (+5 more)
examples/: README.md  example_CRISPR_gene_question.py
tests/: test_agent_with_robust.py  test_quick.py  test_robust_parsing.py  test_simple.py  test_smoke_llm.py  test_spin_robust.py  test_validation.py  test_validation_self_heal.py
(+3 files in other folders)
